--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
 body {
-	background-color: aquamarine;
+	background-color: rgb(96, 219, 178);
+	font-family: 'Raleway', sans-serif;
+	font-weight: 100;
+}
+
+h1 {
+	text-align: center;
+}
+
+td {
+	text-transform: capitalize;
+}
+
+td,
+tr,
+table {
+	border: none;
+}
+
+p {
+	margin-bottom: 1px;
+}
+p,
+ul {
+	font-family: sans-serif;
 }
